# obsidian-daily-digest

./: .env.example  .gitignore  Daily Digest 使用说明.md  config.py  config_consumer.py  config_finance.py  cron-trigger-schedule.js  cron-trigger.js  digest_writer.py  feedback.py  mailer.py  main.py  pyproject.toml  requirements.txt  schedule_generator.py  scheduler.py  summarizer.py  配置说明-Cron定时触发.md
collectors/: github_collector.py  rss_collector.py  youtube_collector.py
